--- a/.github/ISSUE_TEMPLATE/1-10实现-if.md
+++ b/.github/ISSUE_TEMPLATE/1-10实现-if.md
@@ -3,7 +3,7 @@ name: 1.10.if.md
 about: 1-10实现-if.md
 title: 1-10实现-if.md
 labels: answer
-assignees: paiDaXing-web
+assignees: Ustinian
             
 ---
             
